@@ -1,4 +1,4 @@
-$NetBSD: CHANGES-2007,v 1.1858 2007/08/22 12:25:46 gdt Exp $
+$NetBSD: CHANGES-2007,v 1.1859 2007/08/22 15:16:36 smb Exp $
 
 Changes to the packages collection and infrastructure in 2007:
 
@@ -3410,3 +3410,4 @@ Changes to the packages collection and infrastructure in 2007:
 	Updated mail/clamav to 0.91.2 [martti 2007-08-22]
 	Updated devel/cpuflags to 1.13 [tron 2007-08-22]
 	Updated geography/postgresql81-postgis to 1.3.1 [gdt 2007-08-22]
+	Added fonts/inconsolata version 20070822 [smb 2007-08-22]
